--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="javascript:void(0)">Simple jdbc Processor Generator</a>
+                <a class="navbar-brand" href="javascript:void(0)">Simple Jdbc Processor Generator</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -121,8 +121,8 @@
                     <div class='form-group'>
                         <label>Java Date Type:</label>
                         <select class="form-control" id="javaDateType">
-                            <option selected="selected" value="java.util.Date">java.util.Date</option>
-                            <option value="java.time.LocalDateTime">java.time.LocalDateTime</option>
+                            <option selected="selected" value="java.time.LocalDateTime">java.time.LocalDateTime</option>
+                            <option value="java.util.Date">java.util.Date</option>
                         </select>
                     </div>
                     <div class='modal-footer'>
